--- a/page2.css
+++ b/page2.css
@@ -1,5 +1,5 @@
 body {
-  font-size: var(--fz, 3em);
+  font-size: var(--fz, 3.2em);
   background: var(--bgc, #000);
   padding: 0 1em;
   overflow-x: hidden;
@@ -26,6 +26,17 @@ body {
   /* max-width: 100rem; */
   max-width: 35em;
   margin: auto;
+}
+
+#c2::after {
+  content: '-' counter(page) '-';
+  counter-reset: page var(--page);
+  display: block;
+  font-size: 2rem;
+  font-family: monospace;
+  text-align: center;
+  opacity: .4;
+  margin: 2em 0;
 }
 
 #nav {
