--- a/page2.css
+++ b/page2.css
@@ -4,19 +4,24 @@ body {
   padding: 0 1em;
   overflow-x: hidden;
   color: var(--color, #eee);
+  --scrollbar-opacity: .15;
 }
 
- ::-webkit-scrollbar {
+body:active {
+  --scrollbar-opacity: .6;
+}
+
+::-webkit-scrollbar {
   width: 3px;
 }
 
- ::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.15);
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, .15);
 }
 
  ::-webkit-scrollbar-thumb {
   /*background: rgba(0, 0, 0, 0.5);*/
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(255, 255, 255, var(--scrollbar-opacity));
 }
 #c1 {
   display: none;
@@ -26,19 +31,30 @@ body {
   /* max-width: 100rem; */
   max-width: 35em;
   margin: auto;
+  counter-reset: page var(--page) len var(--len);
 }
 
 #c2::after {
   content: '-' counter(page) '-';
-  counter-reset: page var(--page);
-  display: block;
+  margin: 2em 0;
   font-size: 2rem;
+  opacity: .4;
+}
+#c2::before,
+#c2::after {
+  display: block;
   font-family: monospace;
   text-align: center;
-  opacity: .4;
-  margin: 2em 0;
 }
 
+#c2::before {
+  content: '=' counter(len) '=';
+  position: absolute;
+  right: .25em;
+  top: .25em;
+  font-size: 1.5rem;
+  opacity: 0.3;
+}
 #nav {
   position: fixed;
   top: 0;
@@ -71,6 +87,11 @@ body {
 }
 #nav a:target {
   outline: 1px solid #fff;
+}
+#nav a:target::after {
+  content: '-' attr(data-p) '%';
+  font-size: small;
+  color: #ff0;
 }
 #navctrl {
   display: none;
